tests/language_modules/08_routines/valid/function_returns_boolean.vf
module FunctionReturnsBoolean

function ready() returns Boolean
is
    return true
end ready

end FunctionReturnsBoolean