tests/language_modules/08_routines/invalid_semantics/wrong_argument_type.vf
module WrongArgumentType

function negate(flag: Boolean) returns Boolean
is
    return not flag
end negate

procedure main()
is
    check negate(1)
end main

end WrongArgumentType